# SQL_bot

./: .gitignore  CLAUDE.md  pyproject.toml  run.sh
app/: __init__.py  auth.py  catalog.py  chat.py  concepts.py  config.py  db.py  llm.py  main.py  models.py  rate_limit.py  schema_catalog.py  schema_fetch.py  schema_parser.py  session.py  sql_gen.py  sql_guard.py  validators.py
app/static/css/: space-theme.css
app/static/js/: chat.js  stars-animation.js
app/templates/: base.html  chat.html  error.html  login.html
config/: super_users.json
schema/: concepts.yaml  frequent_column.csv  frequent_column_enriched.csv  frequent_table.csv  join_edges.csv  merged_tables_Term.xlsx  relationships.md
tests/: __init__.py  test_auth.py  test_catalog.py  test_phi_blocking.py  test_rate_limit.py  test_routes.py  test_sql_guard.py
